Localstorage small fix, kana spacing

--- a/src/app/pages/kanastudy/kana.component.css
+++ b/src/app/pages/kanastudy/kana.component.css
@@ -42,10 +42,6 @@
   white-space: pre-wrap;
 }
 
-.gameInput:empty {
-  margin: 12.3vw;
-}
-
 .gameTimer {
 }
 
